--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,38 +17,12 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: Go to app folder
-          run:
-            cd server
-
       - name: Install dependencies
+        working-directory: ./server
         run: 
           npm install
           
       - name: Build Vue3
+        working-directory: ./server
         run: 
           npm run build
-
-  build-php:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Go to app folder
-          run:
-            cd server
-
-      - name: Validate composer.json and composer.lock
-          run: composer validate --strict
-
-      - name: Cache Composer packages
-          id: composer-cache
-          uses: actions/cache@v3
-          with:
-            path: vendor
-            key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-            restore-keys: |
-              ${{ runner.os }}-php-
-
-            - name: Install dependencies
-              run: composer install --prefer-dist --no-progress
