--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.0",
+        "@fortawesome/free-brands-svg-icons": "^6.2.0",
+        "@fortawesome/free-regular-svg-icons": "^6.2.0",
+        "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/vue-fontawesome": "^3.0.1",
         "chart.js": "^3.9.1",
         "daisyui": "^2.24.0",
+        "maska": "^1.5.0",
         "vue-chartjs": "^4.1.1"
     }
 }
