--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "chart.js": "^3.9.1",
         "daisyui": "^2.24.0",
         "maska": "^1.5.0",
-        "vue-chartjs": "^4.1.1"
+        "moment": "^2.29.4",
+        "vue-chartjs": "^4.1.1",
+        "vue3-qrcode-reader": "^0.0.1"
     }
 }
