Mudança de escopo

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@chenfengyuan/vue-qrcode": "^2.0.0",
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-brands-svg-icons": "^6.2.0",
         "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -28,8 +29,11 @@
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "chart.js": "^3.9.1",
         "daisyui": "^2.24.0",
+        "flowbite": "^1.5.3",
+        "flowbite-datepicker": "^1.2.2",
         "maska": "^1.5.0",
         "moment": "^2.29.4",
+        "qrcode": "^1.5.1",
         "vue-chartjs": "^4.1.1",
         "vue3-qrcode-reader": "^0.0.1"
     }
